--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -1,6 +1,6 @@
 @import "common/_variables";
-@import url(https://fonts.googleapis.com/css?family=Dancing+Script);
-@import url(https://fonts.googleapis.com/css?family=EB+Garamond);
+// @import url(https://fonts.googleapis.com/css?family=Dancing+Script);
+// @import url(https://fonts.googleapis.com/css?family=EB+Garamond);
 
 // Automatically injected Bower dependencies via wiredep (never manually edit this block)
 // bower:scss
@@ -14,6 +14,7 @@
 @import "components/_grid";
 @import "components/_wp-classes";
 @import "layouts/_header";
+@import "layouts/_menu";
 @import "layouts/_sidebar";
 @import "layouts/_footer";
 @import "layouts/_pages";
