--- a/assets/styles/layouts/_header.scss
+++ b/assets/styles/layouts/_header.scss
@@ -1,9 +1,11 @@
 .mobile-header {
   background: url('../images/background.jpg') no-repeat center/cover;
+  height: 300px;
   @media (min-width: 600px) {
     background: url('../images/background_BIG.jpg') no-repeat center/cover;
+    height: 500px;
   }
-  height: 300px;
+
   width: 100%;
   text-align: center;
 }
@@ -48,4 +50,43 @@
 .amor-inner-box h4 {
   font-family: 'Dancing Script', cursive;
   padding: 0 10px;
+}
+//Cousel
+.amor-corousel {
+  clear: both;
+}
+.amor-carousel-img {
+  width: 100%;
+  height: 400px;
+  background-size: cover;
+}
+.amor-carousel-img h2 {
+  width: 60%;
+  margin: 0 auto;
+  position: relative;
+  top: 40px;
+  font-size: 4rem;
+  font-family: 'Dancing Script', cursive;
+  color: black;
+  text-align: center;
+  padding: 3px 10px;
+  border: 1px solid $dourado;
+  background: rgba(255,255,255,0.5);
+}
+.slick-dots {
+    top: 350px;
+    li {
+        button {
+            border: 1px solid white;
+            border-radius: 50%;
+            padding: 3px;
+            &:before {
+                font-size: 14px;
+                color: $rosa;
+            }
+        }
+        &.slick-active button:before {
+            color: $rosa;
+        }
+    }
 }
