--- a/assets/styles/layouts/_menu.scss
+++ b/assets/styles/layouts/_menu.scss
@@ -1,6 +1,37 @@
 .mobile-menu {
   display: none;
-  height: 100%;
-  width: 100%;
+  min-height: 100%;
+  min-width: 100%;
   background: $rosa;
+  z-index: 99;
+  overflow: hidden;
+  position: fixed;
+  top: 0;
+}
+.mobile-menu .glyphicon-remove {
+  cursor: pointer;
+  color: white;
+  height: 50px;
+  width: 50px;
+  top: 15px;
+  right: 5px;
+  font-size: 1.5em;
+  float: right;
+  z-index: 999;
+}
+.mobile-menu img {
+  float: left;
+}
+.mobile-menu ul li {
+  width: 100%;
+  text-align: center;
+}
+.mobile-menu ul .current_page_item {
+  background: none;
+  padding-top: 80px;
+}
+.mobile-menu ul li a {
+  font-size: 1.5em;
+  color: white;
+  font-family: 'Dancing Script', cursive;
 }
