--- a/assets/styles/common/_global.scss
+++ b/assets/styles/common/_global.scss
@@ -19,6 +19,11 @@ h2 { font-size: 2em; }
     display: none;
   }
 }
+@media (max-width: 767px) {
+  .desktop {
+    display: none;
+  }
+}
 .headroom {position: fixed;top: 0;left: 0;right: 0;transition: all .2s ease-in-out;}
 .headroom--unpinned {top: -100px;}
 .headroom--pinned {top: 0;}
