--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -9,6 +9,7 @@
 
 @import "common/_global";
 @import "components/_slick-theme.scss";
+@import "components/_widgets.scss";
 @import "components/_buttons";
 @import "components/_comments";
 @import "components/_forms";
