--- a/assets/styles/common/_global.scss
+++ b/assets/styles/common/_global.scss
@@ -14,6 +14,9 @@ h1,h2,h3,h4,h5,h6,p {
 }
 h1 { font-size: 3em; }
 h2 { font-size: 2em; }
+a:hover {
+  text-decoration: none;
+}
 @media (min-width: 768px) {
   .mobile {
     display: none;
